[profile.fulldebug]
inherits = "dev"
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = "off"

[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"
authors = ["Octavio Garcia Aguirre oaguirre@frsf.utn.edu.ar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num_cpus = "1.0"
sdl2 = "0.34"